# WalkToSchool

./: CMakeLists.txt  README.md  settings.json
include/: functions.h
src/: dijkstra.c  main.c
